MInor design updates

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -1093,7 +1093,7 @@
     },
     {
       "path": "src/js/javascript.js",
-      "configJson": "{\"autoCompile\":true,\"forceCompile\":false,\"customOutput\":\"assets/js/javascript.min.js\",\"sourceMap\":true,\"compiler-babel\":{\"enabled\":false},\"compiler-uglify-js\":{\"enabled\":true,\"mangle\":true},\"compiler-concat-js\":{\"enabled\":true},\"outputSuffix\":\"-dist\",\"compiler-javascript\":{\"mangle\":true}}"
+      "configJson": "{\"autoCompile\":true,\"forceCompile\":false,\"customOutput\":\"assets/js/javascript.min.js\",\"sourceMap\":true,\"compiler-concat-js\":{\"enabled\":true},\"compiler-babel\":{\"enabled\":true},\"compiler-uglify-js\":{\"enabled\":false,\"mangle\":true},\"outputSuffix\":\"-dist\",\"compiler-javascript\":{\"mangle\":true}}"
     },
     {
       "path": "assets/js/javascript.js",
@@ -1105,7 +1105,7 @@
     },
     {
       "path": "assets/js/javascript.min.js",
-      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"sourceMap\":false,\"compiler-babel\":{\"enabled\":false},\"compiler-uglify-js\":{\"enabled\":true,\"mangle\":true},\"compiler-concat-js\":{\"enabled\":true},\"outputSuffix\":\"-dist\",\"compiler-javascript\":{\"mangle\":true}}"
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"sourceMap\":false,\"compiler-concat-js\":{\"enabled\":true},\"compiler-babel\":{\"enabled\":false},\"compiler-uglify-js\":{\"enabled\":true,\"mangle\":true},\"outputSuffix\":\"-dist\",\"compiler-javascript\":{\"mangle\":true}}"
     },
     {
       "path": "src/js/jquery-header.js",
@@ -1151,7 +1151,7 @@
       "src/js",
       "src/css/layout",
       "src",
-      "src/css"
+      "assets"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -1577,7 +1577,7 @@
   },
   "file-type-pug": "{\"autoCompile\":true,\"compiler-pug\":{\"pretty\":true,\"enabled\":true},\"compilers\":[\"pug\"],\"output\":{\"outputType\":\"REPLACE_SEGMENT\",\"replaceSegments\":[\"jade\",\"haml\",\"slim\",\"markdown\",\"md\",\"kit\"],\"replaceSegmentsWith\":[\"html\"],\"relative\":\"\"}}",
   "file-type-css": "{\"autoCompile\":false,\"sourceMap\":false,\"compiler-minify-css\":{\"enabled\":true},\"compiler-cssnext\":{\"enabled\":false},\"compiler-autoprefixer\":{\"enabled\":false},\"compilers\":[\"autoprefixer\",\"cssnext\",\"minify-css\"],\"output\":{\"outputType\":\"RELATIVE_SOURCE\",\"replaceSegments\":[],\"replaceSegmentsWith\":[],\"relative\":\"\"},\"outputSuffix\":\"-dist\"}",
-  "file-type-javascript": "{\"compilers\":[\"concat-js\",\"babel\",\"uglify-js\"],\"sourceMap\":true,\"output\":{\"replaceSegments\":[]},\"outputSuffix\":\".min\",\"autoCompile\":false,\"compiler-javascript\":{\"mangle\":true}}",
+  "file-type-javascript": "{\"compilers\":[\"concat-js\",\"babel\",\"uglify-js\"],\"sourceMap\":true,\"output\":{\"replaceSegments\":[]},\"outputSuffix\":\".min\",\"compiler-babel\":{\"enabled\":true},\"autoCompile\":false,\"compiler-javascript\":{\"mangle\":true}}",
   "file-type-stylus": "{\"autoCompile\":true,\"sourceMap\":false,\"compiler-autoprefixer\":{\"enabled\":false},\"compiler-stylus\":{\"nib\":false,\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false},\"compilers\":[\"stylus\",\"autoprefixer\",\"minify-css\"],\"output\":{\"outputType\":\"REPLACE_SEGMENT\",\"replaceSegments\":[\"less\",\"sass\",\"stylus\",\"scss\",\"styl\"],\"replaceSegmentsWith\":[\"css\"],\"relative\":\"\"}}",
   "file-type-markdown": "{\"autoCompile\":true,\"compiler-markdown\":{\"sanitize\":false,\"gfm\":true,\"wrapWithHtml\":false,\"enabled\":true,\"githubFlavored\":true},\"compilers\":[\"markdown\"],\"output\":{\"outputType\":\"REPLACE_SEGMENT\",\"replaceSegments\":[\"jade\",\"haml\",\"slim\",\"markdown\",\"md\",\"kit\"],\"replaceSegmentsWith\":[\"html\"],\"relative\":\"\"}}",
   "file-type-haml": "{\"autoCompile\":true,\"compiler-haml\":{\"pretty\":true,\"doubleQuotes\":false,\"enabled\":true,\"doubleQuoteAttributes\":true},\"compilers\":[\"haml\"],\"output\":{\"outputType\":\"REPLACE_SEGMENT\",\"replaceSegments\":[\"jade\",\"haml\",\"slim\",\"markdown\",\"md\",\"kit\"],\"replaceSegmentsWith\":[\"html\"],\"relative\":\"\"}}",
@@ -1669,7 +1669,7 @@
   },
   "file-type-typescript": "{\"compilers\":[\"typescript\",\"uglify-js\"]}",
   "babel": {
-    "useBabelRc": true,
+    "useBabelRc": false,
     "presets": {
       "babel-preset-es2015": true
     },
