--- a/prepros-6.config
+++ b/prepros-6.config
@@ -1093,7 +1093,7 @@
     },
     {
       "path": "src/js/javascript.js",
-      "configJson": "{\"autoCompile\":true,\"forceCompile\":false,\"customOutput\":\"assets/js/javascript.min.js\",\"sourceMap\":true,\"compiler-concat-js\":{\"enabled\":true},\"compiler-babel\":{\"enabled\":true},\"compiler-uglify-js\":{\"enabled\":false,\"mangle\":true},\"outputSuffix\":\"-dist\",\"compiler-javascript\":{\"mangle\":true}}"
+      "configJson": "{\"autoCompile\":true,\"forceCompile\":false,\"customOutput\":\"assets/js/javascript.min.js\",\"sourceMap\":true,\"compiler-concat-js\":{\"enabled\":true},\"compiler-babel\":{\"enabled\":true},\"compiler-uglify-js\":{\"enabled\":false,\"mangle\":false},\"outputSuffix\":\"-dist\",\"compiler-javascript\":{\"mangle\":true}}"
     },
     {
       "path": "assets/js/javascript.js",
@@ -1147,7 +1147,6 @@
   "fileTree": {
     "expandedDirs": [
       "vendor/mobiledetect/mobiledetectlib",
-      "assets/js",
       "src/js",
       "src/css/layout",
       "src",
@@ -1440,7 +1439,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "log"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
