Updated homepage & mobile menu

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -1093,7 +1093,7 @@
     },
     {
       "path": "src/js/javascript.js",
-      "configJson": "{\"autoCompile\":true,\"forceCompile\":false,\"customOutput\":\"assets/js/javascript.min.js\",\"sourceMap\":true,\"compiler-concat-js\":{\"enabled\":true},\"compiler-babel\":{\"enabled\":true},\"compiler-uglify-js\":{\"enabled\":false,\"mangle\":false},\"outputSuffix\":\"-dist\",\"compiler-javascript\":{\"mangle\":true}}"
+      "configJson": "{\"autoCompile\":true,\"forceCompile\":false,\"customOutput\":\"assets/js/javascript.min.js\",\"sourceMap\":true,\"compiler-concat-js\":{\"enabled\":true},\"compiler-babel\":{\"enabled\":true},\"compiler-uglify-js\":{\"enabled\":true,\"mangle\":false},\"outputSuffix\":\"-dist\",\"compiler-javascript\":{\"mangle\":true}}"
     },
     {
       "path": "assets/js/javascript.js",
@@ -1150,7 +1150,8 @@
       "src/js",
       "src/css/layout",
       "src",
-      "assets"
+      "assets",
+      "assets/css"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
