--- a/package.json
+++ b/package.json
@@ -1,20 +1,16 @@
 {
   "name": "cornelius",
-  "version": "1.0.0",
-  "description": "An Object Oriented WordPress starter framework.",
+  "version": "5.0.0",
+  "description": "Custom WordPress theme developed for corneliucirlan.con",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/corneliucirlan/ccwp.git"
+    "url": "git+https://github.com/corneliucirlan/cornelius.git"
   },
   "author": "Corneliu Cirlan",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/corneliucirlan/ccwp/issues"
-  },
   "homepage": "https://github.com/corneliucirlan/ccwp#readme",
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.6.3",
