Created mobile menu using SVG

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -31,9 +31,10 @@
   "fileTree": {
     "expandedDirs": [
       "src",
-      "src/js",
       "assets",
-      "assets/js"
+      "assets/js",
+      "assets/css",
+      "src/css"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -322,7 +323,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "log"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
