--- a/prepros-6.config
+++ b/prepros-6.config
@@ -21,7 +21,7 @@
     },
     {
       "path": "assets/css/style.css",
-      "configJson": "{\"autoCompile\":true,\"forceCompile\":false,\"customOutput\":\"assets/css/style.min.css\",\"sourceMap\":false,\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-cssnext\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":true},\"outputSuffix\":\"-dist\"}"
+      "configJson": "{\"autoCompile\":true,\"forceCompile\":false,\"customOutput\":\"assets/css/style.min.css\",\"sourceMap\":true,\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-cssnext\":{\"enabled\":false},\"compiler-minify-css\":{\"enabled\":true},\"outputSuffix\":\"-dist\"}"
     },
     {
       "path": "src/js/javascript.js",
@@ -33,8 +33,8 @@
       "src",
       "assets",
       "assets/js",
-      "assets/css",
-      "src/css"
+      "src/css",
+      "assets/css"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -123,6 +123,8 @@
         "node_modules/@fortawesome/fontawesome-free/scss/_stacked.scss",
         "node_modules/@fortawesome/fontawesome-free/scss/_icons.scss",
         "node_modules/@fortawesome/fontawesome-free/scss/_screen-reader.scss",
+        "node_modules/bootstrap/scss/vendor/_rfs.scss",
+        "node_modules/bootstrap/scss/mixins/_deprecate.scss",
         "node_modules/bootstrap/scss/mixins/_breakpoints.scss",
         "node_modules/bootstrap/scss/mixins/_hover.scss",
         "node_modules/bootstrap/scss/mixins/_image.scss",
@@ -166,6 +168,7 @@
         "node_modules/bootstrap/scss/utilities/_screenreaders.scss",
         "node_modules/bootstrap/scss/utilities/_shadows.scss",
         "node_modules/bootstrap/scss/utilities/_sizing.scss",
+        "node_modules/bootstrap/scss/utilities/_stretched-link.scss",
         "node_modules/bootstrap/scss/utilities/_spacing.scss",
         "node_modules/bootstrap/scss/utilities/_text.scss",
         "node_modules/bootstrap/scss/utilities/_visibility.scss"
